--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -59,8 +59,153 @@ a:hover {
   <li>September 29th, 2024</br>
     9am - 3pm, Rm xxx, <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (Seminary Pl, across from the Ling Dept.) 
 </ul>
+<h3>Date and location</h3>
 
-<h3>Parking</h3>
+<p>
+    November 16, 2019<br/>
+    Academic Building Rm 1170<br/>
+    15 Seminary Pl, New Brunswick, NJ (<a href="https://goo.gl/maps/nUBmdWhgrH8tKTEQ9">map</a>)
+</p>
+
+<h3>Schedule</h3>
+
+<table id="t01">
+  <tr>
+    <th>Time</th>
+    <th>Speakers</th> 
+    <th>University</th>
+    <th>Title</th>
+
+  </tr>
+    <tr>
+    <td>11:00</td>
+    <td>Lunch outside Room 1170</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>11:55</td>
+    <td>Opening Remarks</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>12:00</td>
+    <td>Jon Rawski</td>
+    <td>Stony Brook</td>
+    <td>Tensor Product Representations of Subregular Constraints</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>12:30</td>
+    <td>Wenyue Hua, Huteng Dai, & Adam Jardine</td>
+    <td>Rutgers</td>
+    <td>Subregular Learning of a Phonology and a Set of Underlying Forms</td> 
+    <td>[<a href="UR_project_slides.pdf#rutgers">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>13:00</td>
+    <td>Break</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>13:15</td>
+    <td>Kyle Gorman</td>
+    <td>CUNY</td>
+    <td>Weird Inflects but OK: Making Sense of Morphological Generation Errors</td>
+    <td>[<a href="abstracts.html#cuny">abstract</a>][<a href="https://docs.google.com/presentation/d/1Ke2a3BgAw4Bm-hJlz04YtpQw9bCFqiIa5pqRruA9sAo/edit#slide=id.g63b88e1d19_1_81">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>13:45</td>
+    <td>Craig Thorburn, Naomi Feldman, and Schatz</td>
+    <td>UMD</td>
+    <td>A Quantitative Model of the Language Familiarity Effect</td> 
+    <td>[<a href="NECPhon_UMD.pptx#UMD">slides</a>][<a href="NECPhon_UMD.pdf">pdf</a>]</td>
+  </tr>
+  <tr>
+    <td>14:15</td>
+    <td>Break</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>14:30</td>
+    <td>Chris Yang and Kevin Ellis</td>
+    <td>MIT</td>
+    <td>On the effect of UR learning on the acquisition of phonological interactions</td>
+    <td>[<a href="https://docs.google.com/presentation/d/1tqB7VzxP6lvuJZK8rpKAjHsFg6ss2JNqbAbOHxpmJl0/edit#slide=id.p">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>15:00</td>
+    <td>Ryan Budnick</td>
+    <td>UPenn</td>
+    <td>Word Segmentation as a Filter on Learnable Stress Systems</td>
+    <td>[<a href="Word segmentation as a filter on learnable stress systems.pptx#upenn">slides</a>]
+  </tr>
+  <tr>
+    <td>15:30</td>
+    <td>Cassidy Henry & Naomi Feldman</td>
+    <td>UMD</td>
+    <td>Evaluating Cross-Linguistic Harmonicity Across Multiple Features</td>
+  </tr>
+  <tr>
+    <td>16:00</td>
+    <td>Break</td>
+    <td></td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>16:15</td>
+    <td>Spencer Caplan</td>
+    <td>UPenn</td>
+    <td>Now You Hear Me, Later You Don't: The Markovian Nature of Phonological Categorization</td>
+    <td>[<a href="Caplan_ILC_VOT_Necphon.pdf#upenn">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>16:45</td>
+    <td>Chris Oakden, Adam Jardine, and Jane Chandlee</td>
+    <td>Rutgers/Haverford</td>
+    <td>Modelling Phonological Processes with Recursive Programs Schemes</td>
+    <td>[<a href="BMRS.pdf#rutgers">slides</a>]</td> 
+  </tr>
+  <tr>
+    <td>17:15</td>
+    <td>Andrew Lamont</td>
+    <td>UMass</td>
+    <td>Nasal cluster dissimilation and tier-based strict locality</td>
+    <td>[<a href="Lamont_NECPhon-2019-handout.pdf">handout</a>]</td>
+  </tr>
+  <tr>
+    <td>17:45</td>
+    <td>Closing Remarks and Business Meeting</td>
+    <td></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td>18:00</td>
+    <td>Dinner(informal)</td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+
+<h3>Accomodations</h3>
+
+<p>
+    For crash space for grads, please contact Dine Mamadou (dine.mamadou (at) rutgers.edu).
+</p>
+
+<p>
+    There are two hotels close to campus, but they are on the expensive side:
+    <ul>
+        <li><a href="https://www.theheldrich.com/">The Heldrich</a></li>
+        <li><a href="https://www.hyatt.com/en-US/hotel/new-jersey/hyatt-regency-new-brunswick/ewrrn?src=corp_lclb_gmb_seo_nam_ewrrn">Hyatt Regency New Brunswick</a></li>
+    </ul>
+</p>
+<h4>Parking</h4>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2551.285059339139!2d-74.44690078570017!3d40.497242739981985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70e711073d8bf62e!2sGateway+Garage!5e0!3m2!1sen!2sus!4v1540329199031" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
