--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+p<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -62,7 +62,7 @@ a:hover {
 <h3>Date and location</h3>
 
 <p>
-    November 16, 2019<br/>
+    September 27-29th, 2024<br/>
     Academic Building Rm 1170<br/>
     15 Seminary Pl, New Brunswick, NJ (<a href="https://goo.gl/maps/nUBmdWhgrH8tKTEQ9">map</a>)
 </p>
@@ -195,7 +195,7 @@ a:hover {
 <h3>Accomodations</h3>
 
 <p>
-    For crash space for grads, please contact Dine Mamadou (dine.mamadou (at) rutgers.edu).
+    For crash space for grads, please contact Hyunjung (hyunjung.joo (at) rutgers.edu) and Vinny.
 </p>
 
 <p>
