--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -1,4 +1,4 @@
-p<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -67,7 +67,7 @@ a:hover {
     15 Seminary Pl, New Brunswick, NJ (<a href="https://goo.gl/maps/nUBmdWhgrH8tKTEQ9">map</a>)
 </p>
 
-<h3>Schedule</h3>
+<h3>Schedule: Day 1</h3>
 
 <table id="t01">
   <tr>
@@ -93,94 +93,89 @@ a:hover {
   </tr>
   <tr>
     <td>12:00</td>
-    <td>Jon Rawski</td>
-    <td>Stony Brook</td>
-    <td>Tensor Product Representations of Subregular Constraints</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>12:30</td>
-    <td>Wenyue Hua, Huteng Dai, & Adam Jardine</td>
-    <td>Rutgers</td>
-    <td>Subregular Learning of a Phonology and a Set of Underlying Forms</td> 
-    <td>[<a href="UR_project_slides.pdf#rutgers">slides</a>]</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>13:00</td>
-    <td>Break</td>
-    <td></td>
-    <td></td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
-    <td>13:15</td>
-    <td>Kyle Gorman</td>
-    <td>CUNY</td>
-    <td>Weird Inflects but OK: Making Sense of Morphological Generation Errors</td>
-    <td>[<a href="abstracts.html#cuny">abstract</a>][<a href="https://docs.google.com/presentation/d/1Ke2a3BgAw4Bm-hJlz04YtpQw9bCFqiIa5pqRruA9sAo/edit#slide=id.g63b88e1d19_1_81">slides</a>]</td>
+    <td>13:30</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
-  <tr>
-    <td>13:45</td>
-    <td>Craig Thorburn, Naomi Feldman, and Schatz</td>
-    <td>UMD</td>
-    <td>A Quantitative Model of the Language Familiarity Effect</td> 
-    <td>[<a href="NECPhon_UMD.pptx#UMD">slides</a>][<a href="NECPhon_UMD.pdf">pdf</a>]</td>
-  </tr>
-  <tr>
-    <td>14:15</td>
-    <td>Break</td>
-    <td></td>
-    <td></td>
+   <tr>
+    <td>14:00</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>14:30</td>
-    <td>Chris Yang and Kevin Ellis</td>
-    <td>MIT</td>
-    <td>On the effect of UR learning on the acquisition of phonological interactions</td>
-    <td>[<a href="https://docs.google.com/presentation/d/1tqB7VzxP6lvuJZK8rpKAjHsFg6ss2JNqbAbOHxpmJl0/edit#slide=id.p">slides</a>]</td>
+    <td>Break</td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
     <td>15:00</td>
-    <td>Ryan Budnick</td>
-    <td>UPenn</td>
-    <td>Word Segmentation as a Filter on Learnable Stress Systems</td>
-    <td>[<a href="Word segmentation as a filter on learnable stress systems.pptx#upenn">slides</a>]
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>15:30</td>
-    <td>Cassidy Henry & Naomi Feldman</td>
-    <td>UMD</td>
-    <td>Evaluating Cross-Linguistic Harmonicity Across Multiple Features</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>16:00</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>16:30</td>
     <td>Break</td>
     <td></td>
     <td>Break</td>
   </tr>
   <tr>
-    <td>16:15</td>
-    <td>Spencer Caplan</td>
-    <td>UPenn</td>
-    <td>Now You Hear Me, Later You Don't: The Markovian Nature of Phonological Categorization</td>
-    <td>[<a href="Caplan_ILC_VOT_Necphon.pdf#upenn">slides</a>]</td>
+    <td>17:00</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
-    <td>16:45</td>
-    <td>Chris Oakden, Adam Jardine, and Jane Chandlee</td>
-    <td>Rutgers/Haverford</td>
-    <td>Modelling Phonological Processes with Recursive Programs Schemes</td>
-    <td>[<a href="BMRS.pdf#rutgers">slides</a>]</td> 
-  </tr>
-  <tr>
-    <td>17:15</td>
-    <td>Andrew Lamont</td>
-    <td>UMass</td>
-    <td>Nasal cluster dissimilation and tier-based strict locality</td>
-    <td>[<a href="Lamont_NECPhon-2019-handout.pdf">handout</a>]</td>
+    <td>17:30</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>17:45</td>
-    <td>Closing Remarks and Business Meeting</td>
+    <td>Closing Remarks</td>
     <td></td>
     <td></td>
   </tr>
