--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -64,7 +64,7 @@ a:hover {
 <p>
     September 27-29th, 2024<br/>
     Academic Building Rm 1170<br/>
-    15 Seminary Pl, New Brunswick, NJ (<a href="https://goo.gl/maps/nUBmdWhgrH8tKTEQ9">map</a>)
+    Seminary Pl, New Brunswick, NJ (<a href="https://goo.gl/maps/7Q8RMg5b4dC2">map</a>)
 </p>
 
 <h3>Schedule: Day 1</h3>
@@ -100,28 +100,28 @@ a:hover {
   </tr>
   <tr>
     <td>12:30</td>
-    <td>Speaker1</td>
+    <td>Speaker2</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>13:00</td>
-    <td>Speaker1</td>
+    <td>Speaker3</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>13:30</td>
-    <td>Speaker1</td>
+    <td>Speaker4</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
    <tr>
     <td>14:00</td>
-    <td>Speaker1</td>
+    <td>Speaker5</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
@@ -134,21 +134,21 @@ a:hover {
   </tr>
   <tr>
     <td>15:00</td>
-    <td>Speaker1</td>
+    <td>Speaker6</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>15:30</td>
-    <td>Speaker1</td>
+    <td>Speaker7</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>16:00</td>
-    <td>Speaker1</td>
+    <td>Speaker8</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
@@ -161,14 +161,254 @@ a:hover {
   </tr>
   <tr>
     <td>17:00</td>
-    <td>Speaker1</td>
+    <td>Speaker9</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
   <tr>
     <td>17:30</td>
+    <td>Speaker10</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>17:45</td>
+    <td>Closing Remarks</td>
+    <td></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td>18:00</td>
+    <td>Dinner(informal)</td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+
+<h3>Schedule: Day 2</h3>
+
+<table id="t01">
+  <tr>
+    <th>Time</th>
+    <th>Speakers</th> 
+    <th>University</th>
+    <th>Title</th>
+
+  </tr>
+    <tr>
+    <td>11:00</td>
+    <td>Lunch outside Room 1170</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>11:55</td>
+    <td>Opening Remarks</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>12:00</td>
     <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>12:30</td>
+    <td>Speaker2</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>13:00</td>
+    <td>Speaker3</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>13:30</td>
+    <td>Speaker4</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+   <tr>
+    <td>14:00</td>
+    <td>Speaker5</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>14:30</td>
+    <td>Break</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>15:00</td>
+    <td>Speaker6</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>15:30</td>
+    <td>Speaker7</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>16:00</td>
+    <td>Speaker8</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>16:30</td>
+    <td>Break</td>
+    <td></td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>17:00</td>
+    <td>Speaker9</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>17:30</td>
+    <td>Speaker10</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>17:45</td>
+    <td>Closing Remarks</td>
+    <td></td>
+    <td></td>
+  </tr>
+    <tr>
+    <td>18:00</td>
+    <td>Dinner(informal)</td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+
+<h3>Schedule: Day 3</h3>
+
+<table id="t01">
+  <tr>
+    <th>Time</th>
+    <th>Speakers</th> 
+    <th>University</th>
+    <th>Title</th>
+
+  </tr>
+    <tr>
+    <td>11:00</td>
+    <td>Lunch outside Room 1170</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>11:55</td>
+    <td>Opening Remarks</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+  <tr>
+    <td>12:00</td>
+    <td>Speaker1</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>12:30</td>
+    <td>Speaker2</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>13:00</td>
+    <td>Speaker3</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>13:30</td>
+    <td>Speaker4</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+   <tr>
+    <td>14:00</td>
+    <td>Speaker5</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>14:30</td>
+    <td>Break</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>15:00</td>
+    <td>Speaker6</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>15:30</td>
+    <td>Speaker7</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>16:00</td>
+    <td>Speaker8</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>16:30</td>
+    <td>Break</td>
+    <td></td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>17:00</td>
+    <td>Speaker9</td>
+    <td>School</td>
+    <td>Title</td>
+    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
+  </tr>
+  <tr>
+    <td>17:30</td>
+    <td>Speaker10</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
