--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -430,7 +430,7 @@ a:hover {
 <h3>Accomodations</h3>
 
 <p>
-    For crash space for grads, please contact Hyunjung (hyunjung.joo (at) rutgers.edu) and Vinny.
+    For crash space for grads, please contact Hyunjung (hyunjung.joo (at) rutgers.edu) and Vincent (vc493 (at) scarletmail.rutgers.edu).
 </p>
 
 <p>
