--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -71,280 +71,73 @@ a:hover {
 
 <table id="t01">
   <tr>
-    <th>Time</th>
+    <th>13:00-14:30</th>
     <th>Speakers</th> 
     <th>University</th>
     <th>Title</th>
 
   </tr>
     <tr>
-    <td>11:00</td>
-    <td>Lunch outside Room 1170</td>
+    <td>14:40-16:10</td>
+    <td>Speakers</td>
     <td></td>
     <td></td>
 
   </tr>
   <tr>
-    <td>11:55</td>
-    <td>Opening Remarks</td>
+    <td>16:20-17:50</td>
+    <td>Speakers</td>
     <td></td>
     <td></td>
-
-  </tr>
-  <tr>
-    <td>12:00</td>
-    <td>Speaker1</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>12:30</td>
-    <td>Speaker2</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>13:00</td>
-    <td>Speaker3</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>13:30</td>
-    <td>Speaker4</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-   <tr>
-    <td>14:00</td>
-    <td>Speaker5</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>14:30</td>
-    <td>Break</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>15:00</td>
-    <td>Speaker6</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>15:30</td>
-    <td>Speaker7</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>16:00</td>
-    <td>Speaker8</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>16:30</td>
-    <td>Break</td>
-    <td></td>
-    <td>Break</td>
-  </tr>
-  <tr>
-    <td>17:00</td>
-    <td>Speaker9</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>17:30</td>
-    <td>Speaker10</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>17:45</td>
-    <td>Closing Remarks</td>
-    <td></td>
-    <td></td>
-  </tr>
-    <tr>
-    <td>18:00</td>
-    <td>Dinner(informal)</td>
-    <td></td>
-    <td></td>
-  </tr>
-</table>
 
 <h3>Schedule: Day 2</h3>
 
-<table id="t01">
+<table id="t02">
   <tr>
-    <th>Time</th>
+    <th>9:00-10:30</th>
     <th>Speakers</th> 
     <th>University</th>
     <th>Title</th>
 
   </tr>
     <tr>
-    <td>11:00</td>
+    <td>10:40-12:10</td>
     <td>Lunch outside Room 1170</td>
     <td></td>
     <td></td>
 
   </tr>
   <tr>
-    <td>11:55</td>
+    <td>14:00-15:30</td>
     <td>Opening Remarks</td>
     <td></td>
     <td></td>
 
   </tr>
   <tr>
-    <td>12:00</td>
+    <td>15:40-17:10</td>
     <td>Speaker1</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>12:30</td>
-    <td>Speaker2</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>13:00</td>
-    <td>Speaker3</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>13:30</td>
-    <td>Speaker4</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-   <tr>
-    <td>14:00</td>
-    <td>Speaker5</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>14:30</td>
-    <td>Break</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>15:00</td>
-    <td>Speaker6</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>15:30</td>
-    <td>Speaker7</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>16:00</td>
-    <td>Speaker8</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>16:30</td>
-    <td>Break</td>
-    <td></td>
-    <td>Break</td>
-  </tr>
-  <tr>
-    <td>17:00</td>
-    <td>Speaker9</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>17:30</td>
-    <td>Speaker10</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>17:45</td>
-    <td>Closing Remarks</td>
-    <td></td>
-    <td></td>
-  </tr>
-    <tr>
-    <td>18:00</td>
-    <td>Dinner(informal)</td>
-    <td></td>
-    <td></td>
   </tr>
 </table>
 
 <h3>Schedule: Day 3</h3>
 
-<table id="t01">
+<table id="t03">
   <tr>
-    <th>Time</th>
+    <th>9:00-10:30</th>
     <th>Speakers</th> 
     <th>University</th>
     <th>Title</th>
 
   </tr>
     <tr>
-    <td>11:00</td>
+    <td>10:40-12:10</td>
     <td>Lunch outside Room 1170</td>
     <td></td>
     <td></td>
-
-  </tr>
-  <tr>
-    <td>11:55</td>
-    <td>Opening Remarks</td>
-    <td></td>
-    <td></td>
-
-  </tr>
-  <tr>
-    <td>12:00</td>
-    <td>Speaker1</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
-  <tr>
-    <td>12:30</td>
-    <td>Speaker2</td>
-    <td>School</td>
-    <td>Title</td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
-  </tr>
 
 </table>
 
