--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -71,18 +71,22 @@ a:hover {
 
 <table id="t01">
   <tr>
-    <th>13:00-14:30</th>
+    <th>Time</th>
     <th>Speakers</th> 
     <th>University</th>
     <th>Title</th>
-
   </tr>
-    <tr>
+<tr>
+    <td>13:00-14:30</td>
+    <td>Speakers</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
     <td>14:40-16:10</td>
     <td>Speakers</td>
     <td></td>
     <td></td>
-
   </tr>
   <tr>
     <td>16:20-17:50</td>
@@ -94,10 +98,17 @@ a:hover {
 
 <table id="t02">
   <tr>
-    <th>9:00-10:30</th>
+    <th>Time</th>
     <th>Speakers</th> 
     <th>University</th>
     <th>Title</th>
+
+  </tr>
+<tr>
+    <td>9:00-10:30</td>
+    <td>Lunch outside Room 1170</td>
+    <td></td>
+    <td></td>
 
   </tr>
     <tr>
@@ -127,18 +138,24 @@ a:hover {
 
 <table id="t03">
   <tr>
-    <th>9:00-10:30</th>
-    <th>Speakers</th> 
+    <th></th>
+    <th>Time</th> 
     <th>University</th>
     <th>Title</th>
 
+  </tr>
+	    <tr>
+    <td>9:00-10:30</td>
+    <td>Lunch outside Room 1170</td>
+    <td></td>
+    <td></td>
   </tr>
     <tr>
     <td>10:40-12:10</td>
     <td>Lunch outside Room 1170</td>
     <td></td>
     <td></td>
-
+  </tr>
 </table>
 
 <h3>Accomodations</h3>
