--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -61,10 +61,11 @@ a:hover {
     <td>Speakers</td>
     <td></td>
     <td></td>
-
+  </tr>
+</table>
 <h3>Schedule: Day 2</h3>
 
-<table id="t02">
+<table id="t01">
   <tr>
     <th>Time</th>
     <th>Speakers</th> 
