--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -35,6 +35,13 @@ a:hover {
   Hosted by the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a></br>
 </p></br>
 
+<h3>Date and location</h3>
+
+<p>
+    September 27-29th, 2024<br/>
+    Academic Building Rm xxx<br/>
+    Seminary Pl, New Brunswick, NJ (<a href="https://goo.gl/maps/nUBmdWhgrH8tKTEQ9">map</a>)
+</p>
 <h3>Schedule: Day 1</h3>
 
 <table id="t01">
