--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -40,7 +40,7 @@ a:hover {
 <p>
     September 27-29th, 2024<br/>
     Academic Building Rm xxx<br/>
-    Seminary Pl, New Brunswick, NJ (<a href="https://goo.gl/maps/nUBmdWhgrH8tKTEQ9">map</a>)
+    Seminary Pl, New Brunswick, NJ  <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (across from the Ling Dept.) 
 </p>
 <h3>Schedule: Day 1</h3>
 
@@ -69,6 +69,12 @@ a:hover {
     <td></td>
     <td></td>
   </tr>
+  <tr>
+    <td>18:00-</td>
+    <td>Dinner?</td>
+    <td></td>
+    <td></td>
+  </tr>
 </table>
 <h3>Schedule: Day 2</h3>
 
@@ -82,28 +88,35 @@ a:hover {
   </tr>
 <tr>
     <td>9:00-10:30</td>
-    <td>Lunch outside Room 1170</td>
+    <td>Speakers</td>
     <td></td>
     <td></td>
 
   </tr>
     <tr>
     <td>10:40-12:10</td>
-    <td>Lunch outside Room 1170</td>
+    <td>Speakers</td>
+    <td></td>
+    <td></td>
+
+  </tr>
+    <tr>
+    <td>12:10-14:00</td>
+    <td>Lunch</td>
     <td></td>
     <td></td>
 
   </tr>
   <tr>
     <td>14:00-15:30</td>
-    <td>Opening Remarks</td>
+    <td>Speakers</td>
     <td></td>
     <td></td>
 
   </tr>
   <tr>
     <td>15:40-17:10</td>
-    <td>Speaker1</td>
+    <td>Speakers</td>
     <td>School</td>
     <td>Title</td>
     <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
@@ -120,15 +133,15 @@ a:hover {
     <th>Title</th>
 
   </tr>
-	    <tr>
+  <tr>
     <td>9:00-10:30</td>
-    <td>Lunch outside Room 1170</td>
+    <td>Speakers</td>
     <td></td>
     <td></td>
   </tr>
     <tr>
     <td>10:40-12:10</td>
-    <td>Lunch outside Room 1170</td>
+    <td>Speakers</td>
     <td></td>
     <td></td>
   </tr>
