--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -39,8 +39,8 @@ a:hover {
 
 <p>
     September 27-29th, 2024<br/>
-    Academic Building Rm xxx<br/>
-    Seminary Pl, New Brunswick, NJ  <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Rutgers Academic Building</a> (across from the Ling Dept.) 
+    <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Academic Building</a> Rm xxx (across from the Ling Dept.) <br/>
+    Seminary Pl, New Brunswick, NJ   
 </p>
 <h3>Schedule: Day 1</h3>
 
@@ -53,19 +53,19 @@ a:hover {
   </tr>
 <tr>
     <td>13:00-14:30</td>
-    <td>Speakers</td>
+    <td>Slot1</td>
     <td></td>
     <td></td>
   </tr>
   <tr>
     <td>14:40-16:10</td>
-    <td>Speakers</td>
+    <td>Slot2</td>
     <td></td>
     <td></td>
   </tr>
   <tr>
     <td>16:20-17:50</td>
-    <td>Speakers</td>
+    <td>Slot3</td>
     <td></td>
     <td></td>
   </tr>
@@ -88,14 +88,14 @@ a:hover {
   </tr>
 <tr>
     <td>9:00-10:30</td>
-    <td>Speakers</td>
+    <td>Slot4</td>
     <td></td>
     <td></td>
 
   </tr>
     <tr>
     <td>10:40-12:10</td>
-    <td>Speakers</td>
+    <td>Slot5</td>
     <td></td>
     <td></td>
 
@@ -109,7 +109,7 @@ a:hover {
   </tr>
   <tr>
     <td>14:00-15:30</td>
-    <td>Speakers</td>
+    <td>Slot6</td>
     <td></td>
     <td></td>
 
@@ -135,13 +135,13 @@ a:hover {
   </tr>
   <tr>
     <td>9:00-10:30</td>
-    <td>Speakers</td>
+    <td>Slot7</td>
     <td></td>
     <td></td>
   </tr>
     <tr>
     <td>10:40-12:10</td>
-    <td>Speakers</td>
+    <td>Slot8</td>
     <td></td>
     <td></td>
   </tr>
