--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Adam Jardine">
-  <title>Rutgers MathLing Group </title>
+  <title>The 2024 Rutgers Subregular Phonology Workshop</title>
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link rel="stylesheet" href="../style.css">
-  <meta name="description" content="Rutgers Mathling Group">
+  <meta name="description" content="The 2024 Rutgers Subregular Phonology Workshop">
   <meta name="keywords" content="linguistics,Rutgers,phonology,syntax,semantics,mathematical linguistics,computational linguistics">
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet"> 
@@ -29,7 +29,7 @@ a:hover {
 <body style="margin: 3% 25% 5% 15%">
 <!-- <img style="width:660px;height:200px" src="lab.jpg"> -->
 
-<h1 id="rucll">2024 Rutgers Computational Phonology Workshop</h1>
+<h1 id="rucll">The 2024 Rutgers Subregular Phonology Workshop</h1>
 
 <p class="contact">
   Hosted by the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a></br>
@@ -42,7 +42,7 @@ a:hover {
     <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Academic Building</a> Rm xxx (across from the Ling Dept.) <br/>
     Seminary Pl, New Brunswick, NJ   
 </p>
-<h3>Schedule: Day 1</h3>
+<h3>Day 1: Friday, Sep 27 </h3>
 
 <table id="t01">
   <tr>
@@ -76,7 +76,7 @@ a:hover {
     <td></td>
   </tr>
 </table>
-<h3>Schedule: Day 2</h3>
+<h3>Day 2: Saturday, Sep 28</h3>
 
 <table id="t01">
   <tr>
@@ -119,11 +119,10 @@ a:hover {
     <td>Slot7</td>
     <td></td>
     <td></td>
-    <td>[<a href="Rawski-sbu.pdf#sbu">slides</a>]</td>
   </tr>
 </table>
 
-<h3>Schedule: Day 3</h3>
+<h3>Day 3: Sunday, Sep 29</h3>
 
 <table id="t03">
   <tr>
@@ -150,7 +149,7 @@ a:hover {
 <h3>Accomodations</h3>
 
 <p>
-    For crash space for grads, please contact Hyunjung (hyunjung.joo (at) rutgers.edu) and Vincent (vc493 (at) scarletmail.rutgers.edu).
+    For crash space for grads, please contact Hyunjung (hyunjung.joo (at) rutgers.edu) and Vinny (vc493 (at) scarletmail.rutgers.edu).
 </p>
 
 <p>
@@ -164,29 +163,10 @@ a:hover {
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2551.285059339139!2d-74.44690078570017!3d40.497242739981985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70e711073d8bf62e!2sGateway+Garage!5e0!3m2!1sen!2sus!4v1540329199031" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-<!--
-<ul class="nav">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="papers.html">Papers</a></li>
-  <li><a href="presentations.html">Presentations</a></li>
-  <li><a href="teaching.html">Teaching</a></li>
-  <li><a href="files/cv.pdf">CV (pdf)</a></li>
-</ul>
-
-<div style="margin-left:20%;padding:1px 16px;">
-
-  
-  <p> <img src="files/me.jpg" alt="Mug shot" style="float:right;height:170px;">
- 
-    I'm an Assistant Professor of phonology at the Rutgers <a href="https://ling.rutgers.edu">Department of Linguistics</a>.</p>
-
-  
-</div>
-
 <br/>
 -->
 <p class="footer">
-Last updated: Aug 22 2024<br>
+Last updated: Aug 26 2024<br>
 </p>
 </body>
 </html>
