another small edit

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -47,9 +47,9 @@ a:hover {
 <table id="t01">
   <tr>
     <th>Time</th>
-    <th>Speakers</th> 
-    <th>University</th>
-    <th>Title</th>
+    <th>Speaker(s)</th> 
+    <th>Institution</th>
+    <th>Topic</th>
   </tr>
 <tr>
     <td>13:00-14:30</td>
@@ -81,9 +81,9 @@ a:hover {
 <table id="t01">
   <tr>
     <th>Time</th>
-    <th>Speakers</th> 
-    <th>University</th>
-    <th>Title</th>
+    <th>Speaker(s)</th> 
+    <th>Institution</th>
+    <th>Topic</th>
 
   </tr>
 <tr>
@@ -128,8 +128,9 @@ a:hover {
   <tr>
     <th></th>
     <th>Time</th> 
-    <th>University</th>
-    <th>Title</th>
+    <th>Speaker(s)</th> 
+    <th>Institution</th>
+    <th>Topic</th>
 
   </tr>
   <tr>
