--- a/index.html
+++ b/index.html
@@ -49,21 +49,18 @@
 
         <table>
             <tr>
-                <td rowspan ="4"><b>Graduate</b></td>
-                <td><a href="http://hutengdai.com/">Huteng Dai</a></td>
-            </tr>
-            <tr>
+                <td rowspan ="3"><b>Graduate</b></td>
                 <td>Tatevik Yolyan</td>
             </tr>
             <tr>
                 <td>Hyunjung Joo</td>
             </tr>
             <tr>
-                <td>Vincent Czarnecki</td>
+                <td><a href="https://www.vinczarnecki.com/">Vincent Czarnecki</a></td>
             </tr>
                 <tr>
                     <td rowspan ="1"><b>Undergraduate</b></td>
-                    <td>Haolin Daniel Jin</td>
+                    <td>Ben Evans</td>
                 </tr>
         </table>
 
@@ -73,12 +70,15 @@
         <h4>Events</h4>
 
         <ul>
-            <li> Nov 2022:
+            <li> <b>Sept 2024:</b> We'll be hosting a workshop on subregular methods in computational phonology. Details forthcoming.
+            <li> <b>August 2024:</b> Starting September 1, work in this lab will be supported in part under the auspices of the NSF under the grant <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2416184">Collaborative Research: Subregular Inference of Morpho-phonology (award #2416184)</a>.
+            <li> <b>April 2024:</b> RuCCL member <a href="http://hutengdai.com/">Huteng Dai</a> has accepted a tenure-track Assistant Professor position in computational linguistics at the University of Michigan. Congrats Huteng!</li>
+            <li> <b>Nov 2022:</b>
                 After a period of inactivity due to COVID-19, the lab is back in action!
                 In November, we hosted a talk by PhD alum Luca Iacoponi, who discussed his experiences applying his research experience in linguistics to a career with Amazon.
                 <img style="width:600px" src="luca.jpg" class="center" vspace="20">
             </li>
-            <li> Oct 2022:
+            <li> <b>Oct 2022:</b>
                 Adam Jardine and Huteng Dai presented their work at AMP 2022. 
                 For Adam's tutorial on recursive schemes for phonological analysis, <a href="http://adamjardine.net/bmrstutorial/">click here</a>.
             </li>
