--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -31,9 +31,10 @@ a:hover {
 
 <h1 id="rucll">The 2024 Rutgers Subregular Phonology Workshop</h1>
 
-<p class="contact">
-  Hosted by the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a></br>
-</p></br>
+<p>
+    <b>
+        Hosted by the <a href="https://rucll.github.io/">Rutgers Computational Linguistics Lab</a> and supported by <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2416184">NSF Grant #2416184</a></b>
+</p>
 
 <h3>Date and location</h3>
 
@@ -42,109 +43,115 @@ a:hover {
     <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Academic Building</a> Rm xxx (across from the Ling Dept.) <br/>
     Seminary Pl, New Brunswick, NJ   
 </p>
-<h3>Day 1: Friday, Sep 27 </h3>
 
-<table id="t01">
-  <tr>
-    <th>Time</th>
-    <th>Speaker(s)</th> 
-    <th>Institution</th>
-    <th>Topic</th>
-  </tr>
-<tr>
-    <td>13:00-14:30</td>
-    <td>Slot1</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>14:40-16:10</td>
-    <td>Slot2</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>16:20-17:50</td>
-    <td>Slot3</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>18:00-</td>
-    <td>Dinner?</td>
-    <td></td>
-    <td></td>
-  </tr>
+<h3 id="schedule">Schedule</h3>
+
+<p>The following schedule is tentative. Speakers, times, and topics are liable to change, so keep checking here!</p>
+
+<h4 id="day-1-friday-sep-27">Day 1 (Friday, Sep 27)</h4>
+<table>
+<tbody>
+<tr class="odd">
+<td><strong>1:30 PM - 3:00 PM</strong></td>
+<td>Jane Chandlee, Jeffrey Heinz, and Adam Jardine (Haverford, SBU, Rutgers)</td>
+<td>Learning Underlying Forms</td>
+</tr>
+<tr class="even">
+<td>3:00 PM - 3:10 PM</td>
+<td>Break</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><strong>3:10 PM - 4:10 PM</strong></td>
+<td>Tatevik Yolyan (Rutgers)</td>
+<td>Learning with BMRS</td>
+</tr>
+<tr class="even">
+<td><strong>4:10 PM - 5:10 PM</strong></td>
+<td>Scott Nelson (SBU)</td>
+<td>BMRS and Underspecification</td>
+</tr>
+<tr class="odd">
+<td>5:10 PM</td>
+<td>Dinner</td>
+<td></td>
+</tr>
+</tbody>
 </table>
-<h3>Day 2: Saturday, Sep 28</h3>
-
-<table id="t01">
-  <tr>
-    <th>Time</th>
-    <th>Speaker(s)</th> 
-    <th>Institution</th>
-    <th>Topic</th>
-
-  </tr>
-<tr>
-    <td>9:00-10:30</td>
-    <td>Slot4</td>
-    <td></td>
-    <td></td>
-
-  </tr>
-    <tr>
-    <td>10:40-12:10</td>
-    <td>Slot5</td>
-    <td></td>
-    <td></td>
-
-  </tr>
-    <tr>
-    <td>12:10-14:00</td>
-    <td>Lunch</td>
-    <td></td>
-    <td></td>
-
-  </tr>
-  <tr>
-    <td>14:00-15:30</td>
-    <td>Slot6</td>
-    <td></td>
-    <td></td>
-
-  </tr>
-  <tr>
-    <td>15:40-17:10</td>
-    <td>Slot7</td>
-    <td></td>
-    <td></td>
-  </tr>
+<h4 id="day-2-saturday-sep-28">Day 2 (Saturday, Sep 28)</h4>
+<table>
+<tbody>
+<tr class="odd">
+<td><strong>9:30 AM - 11:00 AM</strong></td>
+<td>William Idsardi (Maryland)</td>
+<td>2-Variable Logics; Privative Contrasts and Complexity</td>
+</tr>
+<tr class="even">
+<td>11:00 AM - 11:25 AM</td>
+<td>Break</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><strong>11:25 AM - 12:25 AM</strong></td>
+<td>Dakotah Lambert (Haverford)</td>
+<td>Abstract Algebra and the Subregular Hierarchy</td>
+</tr>
+<tr class="even">
+<td>12:25 PM - 1:45 PM</td>
+<td>Lunch</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><strong>1:45 PM - 2:45 PM</strong></td>
+<td>Jon Rawski (San Jose State)</td>
+<td>FO and Transformers</td>
+</tr>
+<tr class="even">
+<td>2:45 PM - 3:00 PM</td>
+<td>Break</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><strong>3:00 PM - 4:00 PM</strong></td>
+<td>Hyunjung Joo (Rutgers)</td>
+<td>Intonation as Local Logical Interpretations</td>
+</tr>
+<tr class="even">
+<td>4:00 PM - 4:15 PM</td>
+<td>Break</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><strong>4:15 PM - 5:15 PM</strong></td>
+<td>Vincent Czarnecki (Rutgers)</td>
+<td>Linearization and a Local Syntax-Phonology Interface</td>
+</tr>
+<tr class="even">
+<td>5:30 PM -</td>
+<td>Dinner</td>
+<td></td>
+</tr>
+</tbody>
 </table>
-
-<h3>Day 3: Sunday, Sep 29</h3>
-
-<table id="t03">
-  <tr>
-    <th></th>
-    <th>Time</th> 
-    <th>Speaker(s)</th> 
-    <th>Institution</th>
-    <th>Topic</th>
-
-  </tr>
-  <tr>
-    <td>9:00-10:30</td>
-    <td>Slot8</td>
-    <td></td>
-    <td></td>
-  </tr>
-    <tr>
-    <td>10:40-12:10</td>
-    <td>Slot9</td>
-    <td></td>
-    <td></td>
-  </tr>
+<h4 id="day-3-sunday-sep-29">Day 3 (Sunday, Sep 29)</h4>
+<table>
+<tbody>
+<tr class="odd">
+<td><strong>9:00 AM - 10:00 AM</strong></td>
+<td>Magdalena Markowska (SBU)</td>
+<td>Learning Processes with Features</td>
+</tr>
+<tr class="even">
+<td>10:00 AM - 10:15 AM</td>
+<td>Break</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><strong>10:15 AM - 11:45 AM</strong></td>
+<td>Han Li, Sarah Payne, and Logan Swanson (SBU)</td>
+<td>Topics on Bottom-Up Featural Induction Algorithm (BUFIA)</td>
+</tr>
+</tbody>
 </table>
 
 <h3>Accomodations</h3>
@@ -160,14 +167,17 @@ a:hover {
         <li><a href="https://www.hyatt.com/en-US/hotel/new-jersey/hyatt-regency-new-brunswick/ewrrn?src=corp_lclb_gmb_seo_nam_ewrrn">Hyatt Regency New Brunswick</a></li>
     </ul>
 </p>
-<h4>Parking</h4>
+
+<h3>Parking</h3>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2551.285059339139!2d-74.44690078570017!3d40.497242739981985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70e711073d8bf62e!2sGateway+Garage!5e0!3m2!1sen!2sus!4v1540329199031" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
+
 <br/>
--->
 <p class="footer">
-Last updated: Aug 26 2024<br>
+    <script language="Javascript">
+     document.write("Last updated: " + document.lastModified +"");
+    </script>
 </p>
 </body>
 </html>
