added room number

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -40,7 +40,7 @@ a:hover {
 
 <p>
     September 27-29th, 2024<br/>
-    <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Academic Building</a> Rm xxx (across from the Ling Dept.) <br/>
+    <a href="https://goo.gl/maps/7Q8RMg5b4dC2">Academic Building West</a> (the one on the left looking from Seminary Pl), Rm 4052 <br/>
     Seminary Pl, New Brunswick, NJ   
 </p>
 
