adjusted dakotah and bill's talks

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -82,22 +82,22 @@ a:hover {
 <table>
 <tbody>
 <tr class="odd">
-<td><strong>9:30 AM - 11:00 AM</strong></td>
+<td><strong>9:00 AM - 10:30 AM</strong></td>
 <td>William Idsardi (Maryland)</td>
 <td>2-Variable Logics; Privative Contrasts and Complexity</td>
 </tr>
 <tr class="even">
-<td>11:00 AM - 11:25 AM</td>
+<td>10:30 AM - 10:45 AM</td>
 <td>Break</td>
 <td></td>
 </tr>
 <tr class="odd">
-<td><strong>11:25 AM - 12:25 AM</strong></td>
+<td><strong>10:45 AM - 12:15 PM</strong></td>
 <td>Dakotah Lambert (Haverford)</td>
 <td>Abstract Algebra and the Subregular Hierarchy</td>
 </tr>
 <tr class="even">
-<td>12:25 PM - 1:45 PM</td>
+<td>12:15 PM - 1:45 PM</td>
 <td>Lunch</td>
 <td></td>
 </tr>
