--- a/mathling/index.html
+++ b/mathling/index.html
@@ -46,7 +46,6 @@ a:hover {
 	          Chenli Wang<br>
 		  Vincent Czarnecki<br>
 	          Hyunjung Joo<br>
-		<img style="width:600px" src="mathling.jpg" class="center" vspace="20">
 	      </p>
         </td>
     </tr>
@@ -66,23 +65,27 @@ a:hover {
 <hr>
 
 <!------- Spring 2024 SCHEDULE  -------->	
-<h3>Spring 2024 Schedule</h3>
+<h3>Fall 2024 Schedule</h3>
 
 <p>
-    Every other Wed (approximately), 10am, Rm 108
+    Every other Monday, 9am, Rm 319 at 1 Spring Street
 </p>
 
 <ul>
     <li>
-        <b>Jan 24</b> Organizational meeting (joint w/ PhonX)
+        <b>Sept 9</b> Organizational meeting (joint w/ PhonX)
     </li>
     <li>
-        <b>Feb 14</b> Introduction to logical transductions (FO) (Prof. Adam Jardine)<br>
-        Background reading: <a href="https://www.glossa-journal.org/article/id/5423/"> Chandlee & Jardine (2021) </a>
+        <b>Sept 16</b> Intro to Learning (Prof. Adam Jardine)<br>
     </li>
     <li>
-        <b>Feb 28</b> Transducers, Logic and Algebra for Functions of Finite Words (Merlin) <br>
-        Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
+        <b>Oct 7</b> TBD <br>
+    </li>
+    <li>
+        <b>Oct 21</b> TBD <br>
+    </li>
+    <li>
+        <b>Nov 11</b> TBD <br>
     </li>
 
 </ul>
