--- a/mathling/archive.html
+++ b/mathling/archive.html
@@ -35,6 +35,29 @@ a:hover {
 	
 <a href="index.html">(back to main page)</a>
 
+<!------- Spring 2024 SCHEDULE  -------->
+<h3>Spring 2024 Schedule</h3>
+
+<p>
+    Every other Wed (approximately), 10am, Rm 108
+</p>
+
+<ul>
+    <li>
+        <b>Jan 24</b> Organizational meeting (joint w/ PhonX)
+    </li>
+    <li>
+        <b>Feb 14</b> Introduction to logical transductions (FO) (Prof. Adam Jardine)<br>
+        Background reading: <a href="https://www.glossa-journal.org/article/id/5423/"> Chandlee & Jardine (2021) </a>
+    </li>
+    <li>
+        <b>Feb 28</b> Transducers, Logic and Algebra for Functions of Finite Words (Merlin) <br>
+        Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
+    </li>
+
+</ul>
+</hr>
+	
 <!------- Fall 2023 SCHEDULE  -------->	
 <h3>Fall 2023 Schedule</h3>
 
