--- a/mathling/archive.html
+++ b/mathling/archive.html
@@ -54,6 +54,18 @@ a:hover {
         <b>Feb 28</b> Transducers, Logic and Algebra for Functions of Finite Words (Merlin) <br>
         Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
     </li>
+    <li>
+        <b>Mar 27</b> Working on phonological patterns with logical transduction <br>
+        Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
+    </li>
+       <li>
+        <b>Apr 10</b> Working on phonological patterns with logical transduction (cont.)<br>
+        Background reading: <a href="https://dl.acm.org/doi/abs/10.1145/2984450.2984453"> Filiot & Reynier (2016) </a>
+    </li>
+       <li>
+        <b>Apr 10</b> Relativized adjacency<br>
+        Background reading: <a href="https://link.springer.com/article/10.1007/s10849-023-09398-x"> Lambert (2023) </a>
+    </li>
 
 </ul>
 </hr>
