another schedule update

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -147,7 +147,7 @@ a:hover {
 <td></td>
 </tr>
 <tr class="odd">
-<td><strong>10:15 AM - 11:45 AM</strong></td>
+<td><strong>10:15 AM - 12:15 PM</strong></td>
 <td>Han Li, Sarah Payne, and Logan Swanson (SBU)</td>
 <td>Topics on Bottom-Up Featural Induction Algorithm (BUFIA)</td>
 </tr>
