removed jon, added color

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -23,6 +23,18 @@ a:link, a:visited, a:active {
 a:hover {
 	color: #E5260C;
 }
+
+talk {
+    color:#227a4f ;
+    font-weight: 400;
+}
+
+people {
+    color:#343442 ;
+    font-weight: 400;
+ }
+
+
 </style>
 </head>
 
@@ -53,8 +65,8 @@ a:hover {
 <tbody>
 <tr class="odd">
 <td><strong>1:30 PM - 3:00 PM</strong></td>
-<td>Jane Chandlee, Jeffrey Heinz, and Adam Jardine (Haverford, SBU, Rutgers)</td>
-<td>Learning Underlying Forms</td>
+<td><people>Jane Chandlee, Jeffrey Heinz, and Adam Jardine</people> (Haverford, Stony Brook, Rutgers)</td>
+<td><talk>Learning Underlying Forms</talk></td>
 </tr>
 <tr class="even">
 <td>3:00 PM - 3:10 PM</td>
@@ -63,13 +75,13 @@ a:hover {
 </tr>
 <tr class="odd">
 <td><strong>3:10 PM - 4:10 PM</strong></td>
-<td>Tatevik Yolyan (Rutgers)</td>
-<td>Learning with BMRS</td>
+<td><people>Tatevik Yolyan</people> (Rutgers)</td>
+<td><talk>Learning with BMRS</talk></td>
 </tr>
 <tr class="even">
 <td><strong>4:10 PM - 5:10 PM</strong></td>
-<td>Scott Nelson (SBU)</td>
-<td>BMRS and Underspecification</td>
+<td><people>Scott Nelson</people> (Stony Brook)</td>
+<td><talk>BMRS and Underspecification</talk></td>
 </tr>
 <tr class="odd">
 <td>5:10 PM</td>
@@ -83,8 +95,8 @@ a:hover {
 <tbody>
 <tr class="odd">
 <td><strong>9:00 AM - 10:30 AM</strong></td>
-<td>William Idsardi (Maryland)</td>
-<td>2-Variable Logics; Privative Contrasts and Complexity</td>
+<td><people>William Idsardi</people> (Maryland)</td>
+<td><talk>2-Variable Logics; Privative Contrasts and Complexity</talk></td>
 </tr>
 <tr class="even">
 <td>10:30 AM - 10:45 AM</td>
@@ -93,8 +105,8 @@ a:hover {
 </tr>
 <tr class="odd">
 <td><strong>10:45 AM - 12:15 PM</strong></td>
-<td>Dakotah Lambert (Haverford)</td>
-<td>Abstract Algebra and the Subregular Hierarchy</td>
+<td><people>Dakotah Lambert</people> (Haverford)</td>
+<td><talk>Abstract Algebra and the Subregular Hierarchy</talk></td>
 </tr>
 <tr class="even">
 <td>12:15 PM - 1:45 PM</td>
@@ -103,8 +115,8 @@ a:hover {
 </tr>
 <tr class="odd">
 <td><strong>1:45 PM - 2:45 PM</strong></td>
-<td>Jon Rawski (San Jose State)</td>
-<td>FO and Transformers</td>
+<td><people>Jeffrey Heinz</people> (Stony Brook)</td>
+<td><talk>Learning subsequential functions with less data</talk></td>
 </tr>
 <tr class="even">
 <td>2:45 PM - 3:00 PM</td>
@@ -113,8 +125,8 @@ a:hover {
 </tr>
 <tr class="odd">
 <td><strong>3:00 PM - 4:00 PM</strong></td>
-<td>Hyunjung Joo (Rutgers)</td>
-<td>Intonation as Local Logical Interpretations</td>
+<td><people>Hyunjung Joo</people> (Rutgers)</td>
+<td><talk>Intonation as Local Logical Interpretations</talk></td>
 </tr>
 <tr class="even">
 <td>4:00 PM - 4:15 PM</td>
@@ -123,8 +135,8 @@ a:hover {
 </tr>
 <tr class="odd">
 <td><strong>4:15 PM - 5:15 PM</strong></td>
-<td>Vincent Czarnecki (Rutgers)</td>
-<td>Linearization and a Local Syntax-Phonology Interface</td>
+<td><people>Vincent Czarnecki</people> (Rutgers)</td>
+<td><talk>Linearization and a Local Syntax-Phonology Interface</talk></td>
 </tr>
 <tr class="even">
 <td>5:30 PM -</td>
@@ -138,8 +150,8 @@ a:hover {
 <tbody>
 <tr class="odd">
 <td><strong>9:00 AM - 10:00 AM</strong></td>
-<td>Magdalena Markowska (SBU)</td>
-<td>Learning Processes with Features</td>
+<td><people>Magdalena Markowska</people> (Stony Brook)</td>
+<td><talk>Learning Processes with Features</talk></td>
 </tr>
 <tr class="even">
 <td>10:00 AM - 10:15 AM</td>
@@ -148,8 +160,8 @@ a:hover {
 </tr>
 <tr class="odd">
 <td><strong>10:15 AM - 12:15 PM</strong></td>
-<td>Han Li, Sarah Payne, and Logan Swanson (SBU)</td>
-<td>Topics on Bottom-Up Featural Induction Algorithm (BUFIA)</td>
+<td><people>Han Li, Sarah Payne, and Logan Swanson</people> (Stony Brook)</td>
+<td><talk>Topics on Bottom-Up Featural Induction Algorithm (BUFIA)</talk></td>
 </tr>
 </tbody>
 </table>
