added reading for 9/23

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -76,7 +76,8 @@ a:hover {
         <b>Sept 9</b> Organizational meeting (joint w/ PhonX)
     </li>
     <li>
-        <b>Sept 16</b> Intro to Learning (Prof. Adam Jardine)<br>
+        <b>Sept 23</b> Intro to Learning (Prof. Adam Jardine)<br>
+        <b>Reading:</b> <a href="https://drive.google.com/file/d/1BPGKpL-NNSSR531-9LH3CVwzIHku6B4M/view?usp=drive_link">Heinz and Jardine, ms., 'Learning Phonological Grammars'</a> 
     </li>
     <li>
         <b>Oct 7</b> TBD <br>
