--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h4>Events</h4>
 
         <ul>
-            <li> <b>Sept 2024:</b> We'll be hosting a workshop on subregular methods in computational phonology. Details forthcoming.
+            <li> <b>Sept 27-29th:</b> We are hosting <a href="workshop2024/index.html">a workshop on subregular methods in computational phonology</a>!</li> 
             <li> <b>August 2024:</b> Starting September 1, work in this lab will be supported in part under the auspices of the NSF under the grant <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2416184">Collaborative Research: Subregular Inference of Morpho-phonology (award #2416184)</a>.
             <li> <b>April 2024:</b> RuCCL member <a href="http://hutengdai.com/">Huteng Dai</a> has accepted a tenure-track Assistant Professor position in computational linguistics at the University of Michigan. Congrats Huteng!</li>
             <li> <b>Nov 2022:</b>
