added some pdfs

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -25,7 +25,7 @@ a:hover {
 }
 
 talk {
-    color:#227a4f ;
+    color:#4c016e ;
     font-weight: 400;
 }
 
@@ -65,8 +65,12 @@ people {
 <tbody>
 <tr class="odd">
 <td><strong>1:30 PM - 3:00 PM</strong></td>
-<td><people>Jane Chandlee, Jeffrey Heinz, and Adam Jardine</people> (Haverford, Stony Brook, Rutgers)</td>
+<td><people>Jane Chandlee, Jeffrey Heinz, and Adam Jardine</people></td>
 <td><talk>Learning Underlying Forms</talk></td>
+</tr>
+<tr class="odd" >
+    <td></td>
+    <td>(Haverford, Stony Brook, Rutgers)</td>
 </tr>
 <tr class="even">
 <td>3:00 PM - 3:10 PM</td>
@@ -81,7 +85,7 @@ people {
 <tr class="even">
 <td><strong>4:10 PM - 5:10 PM</strong></td>
 <td><people>Scott Nelson</people> (Stony Brook)</td>
-<td><talk>BMRS and Underspecification</talk></td>
+<td><talk>BMRS and Underspecification</talk> [<a href="pdfs/nelson-uspec.pdf">handout pdf</a>]</td>
 </tr>
 <tr class="odd">
 <td>5:10 PM</td>
@@ -106,7 +110,7 @@ people {
 <tr class="odd">
 <td><strong>10:45 AM - 12:15 PM</strong></td>
 <td><people>Dakotah Lambert</people> (Haverford)</td>
-<td><talk>Abstract Algebra and the Subregular Hierarchy</talk></td>
+<td><talk>Abstract Algebra and the Subregular Hierarchy</talk> [<a href="pdfs/lambert-algebra.pdf">handout pdf</a>]</td>
 </tr>
 <tr class="even">
 <td>12:15 PM - 1:45 PM</td>
@@ -116,7 +120,7 @@ people {
 <tr class="odd">
 <td><strong>1:45 PM - 2:45 PM</strong></td>
 <td><people>Jeffrey Heinz</people> (Stony Brook)</td>
-<td><talk>Learning subsequential functions with less data</talk></td>
+<td><talk>Learning subsequential functions with less data</talk> [<a href="pdfs/heinz-lessdata.pdf">handout pdf</a>]</td>
 </tr>
 <tr class="even">
 <td>2:45 PM - 3:00 PM</td>
