--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -164,29 +164,17 @@ people {
 </tr>
 <tr class="odd">
 <td><strong>10:15 AM - 12:15 PM</strong></td>
-<td><people>Han Li, Sarah Payne, and Logan Swanson</people> (Stony Brook)</td>
+<td><people>Han Li, Sarah Payne, and Logan Swanson</people></td>
 <td><talk>Topics on Bottom-Up Featural Induction Algorithm (BUFIA)</talk></td>
+</tr class="even">
+<td></td>
+<td>(Stony Brook)</td>
+<td>[<a href="pdfs/swanson-bufia.pdf">Logan slides</a>]</td>
+<tr>
 </tr>
 </tbody>
 </table>
 
-<h3>Accomodations</h3>
-
-<p>
-    For crash space for grads, please contact Hyunjung (hyunjung.joo (at) rutgers.edu) and Vinny (vc493 (at) scarletmail.rutgers.edu).
-</p>
-
-<p>
-    There are two hotels close to campus, but they are on the expensive side:
-    <ul>
-        <li><a href="https://www.theheldrich.com/">The Heldrich</a></li>
-        <li><a href="https://www.hyatt.com/en-US/hotel/new-jersey/hyatt-regency-new-brunswick/ewrrn?src=corp_lclb_gmb_seo_nam_ewrrn">Hyatt Regency New Brunswick</a></li>
-    </ul>
-</p>
-
-<h3>Parking</h3>
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2551.285059339139!2d-74.44690078570017!3d40.497242739981985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70e711073d8bf62e!2sGateway+Garage!5e0!3m2!1sen!2sus!4v1540329199031" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
 <br/>
