--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -58,7 +58,7 @@ people {
 
 <h3 id="schedule">Schedule</h3>
 
-<p>The following schedule is tentative. Speakers, times, and topics are liable to change, so keep checking here!</p>
+<!-- <p>The following schedule is tentative. Speakers, times, and topics are liable to change, so keep checking here!</p> -->
 
 <h4 id="day-1-friday-sep-27">Day 1 (Friday, Sep 27)</h4>
 <table>
@@ -175,6 +175,9 @@ people {
 </tbody>
 </table>
 
+<h3>Group shot</h3>
+
+<img src="groupphoto.jpg" width="90%">
 
 
 <br/>
